--- a/TestPrototype/app/src/main/res/layout/splash.xml
+++ b/TestPrototype/app/src/main/res/layout/splash.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logo2"
+    android:background="@drawable/logo"
     android:orientation="vertical">
 
 </LinearLayout>
