--- a/TestPrototype/app/src/main/res/values-v21/styles.xml
+++ b/TestPrototype/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.Light">
+    <style name="AppTheme" parent="@android:style/Theme.Material.Light">
+        <item name="android:statusBarColor">@color/statusBarColor</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:colorAccent">@color/accent_material_light</item>
+        <item name="android:colorPrimary">@color/primary_material_light</item>
+        <item name="android:colorBackground">@color/background_holo_dark</item>
     </style>
 </resources>
