--- a/BeaconsPrototype/app/src/main/res/layout/activity_my_activity_beacons.xml
+++ b/BeaconsPrototype/app/src/main/res/layout/activity_my_activity_beacons.xml
@@ -19,6 +19,16 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+
+
+        <com.jiahuan.svgmapview.SVGMapView
+            android:id="@+id/location_mapview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </com.jiahuan.svgmapview.SVGMapView>
+
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_my_activity_beacons" />
